<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IOIO Sample app</string>
    <string name="seekbar_label">Move to control the position:</string>
    <string name="channel1_label">Channel 1 value:</string>
    <string name="channel2_label">Channel 2 value:</string>
    <string name="channel3_label">Channel 3 value:</string>
    <string name="poweron_label">Power on</string>
    <string name="poweroff_label">Power off</string>
</resources>
