<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <SeekBar
        android:id="@+id/Channel1Bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="2000"
        android:progress="0" />

    <SeekBar
        android:id="@+id/Channel2Bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="2000"
        android:progress="0" />

    <SeekBar
        android:id="@+id/Channel3Bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="2000"
        android:progress="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5px"
        android:text="@string/channel1_label" />

    <TextView
        android:id="@+id/Channel1View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.00"
        android:textSize="72sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5px"
        android:text="@string/channel2_label" />

    <TextView
        android:id="@+id/Channel2View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.00"
        android:textSize="72sp" />

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingRight="5px"
	    android:text="@string/channel3_label" />

	<TextView
	    android:id="@+id/Channel3View"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="0.00"
	    android:textSize="72sp" />

	<ToggleButton
	    android:id="@+id/ToggleButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="20px"
	    android:textOff="@string/poweroff_label"
	    android:textOn="@string/poweron_label" />

</LinearLayout>